--- a/Auto Clicker/SkillerAgent.csproj
+++ b/Auto Clicker/SkillerAgent.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{872B5DE1-94A9-4109-9CD8-D9493246C8E8}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Sillker_Agent</RootNamespace>
+    <RootNamespace>Skiller_Agent</RootNamespace>
     <AssemblyName>SkillerAgent</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <TargetFrameworkProfile>
